# lumina-protocol

./: README.md  SECURITY.md
lumina_protocol_dapp/: .gitignore  package-lock.json  package.json
lumina_protocol_dapp/anchor/: Anchor.toml
lumina_protocol_dapp/anchor/programs/lumina/: Cargo.toml
lumina_protocol_dapp/anchor/programs/lumina/src/: errors.rs  lib.rs
lumina_protocol_dapp/anchor/programs/lumina/src/instructions/: claim_milestone.rs  donate.rs  initialize_campaign.rs  initialize_milestone.rs  mod.rs  submit_milestone_proof.rs  vote_on_milestone.rs
lumina_protocol_dapp/anchor/programs/lumina/src/state/: campaign.rs  milestone.rs  mod.rs  sponsor.rs
lumina_protocol_dapp/app/: layout.tsx  page.tsx
lumina_protocol_dapp/app/campaigns/[studentPubkey]/: page.tsx
lumina_protocol_dapp/app/campaigns/create/: page.tsx
lumina_protocol_dapp/app/components/: Navbar.tsx
lumina_protocol_dapp/app/dashboard/sponsor/: page.tsx
lumina_protocol_dapp/app/dashboard/student/: page.tsx
lumina_protocol_dapp/app/lib/: useLumina.ts
lumina_protocol_dapp/app/lib/idl/: lumina_protocol.json
